fix comment and change color of table when change into dark mode

--- a/apps/docs/src/components/ObjectStyles/component/Device/styles.module.css
+++ b/apps/docs/src/components/ObjectStyles/component/Device/styles.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     padding: 8px;
-    background: #ECECEC;
+    background: var(--background);
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
@@ -11,7 +11,7 @@
 }
 
 .heading {
-    color: #383838;
+    color: var(--text-color);
     font-size: 16px;
     font-weight: 500;
     line-height: 31.32px;
@@ -19,7 +19,7 @@
 }
 
 .pixel {
-    color: #383838;
+    color: var(--text-color);
     font-size: 12px;
     font-weight: 400;
     line-height: 31.32px;
