--- a/apps/docs/src/components/TypoTable/styles.module.css
+++ b/apps/docs/src/components/TypoTable/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     > div {
-      color: #d34d12;
+      color: var(--primary);
       font-weight: 750;
       font-size: 32px;
       padding-bottom: 62px;
